Update from template

--- a/brexit_proportions.ipynb
+++ b/brexit_proportions.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c5eefc3",
+   "id": "72af345a",
    "metadata": {},
    "source": [
-    "# Preliminaries"
+    "# Brexit proportions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1a3b560",
+   "metadata": {},
+   "source": [
+    "## Preliminaries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9563c7b9",
+   "id": "af933a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +42,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38840bc7",
+   "id": "937ad4f4",
    "metadata": {},
    "source": [
-    "# Brexit proportions\n",
+    "## The survey company makes its case\n",
     "\n",
-    "Remember the [Brexit referendum](/permutation/population_permutation)?\n",
+    "Remember the [Brexit referendum](https://lisds.github.io/textbook/permutation/population_permutation)?\n",
     "\n",
     "In that page, we found that the survey company working for Hansard ended up\n",
     "with 774 respondents who said they voted Remain, and 541 who said they voted\n",
@@ -49,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b40fad0b",
+   "id": "33d79f98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ec43cf",
+   "id": "9b7f3137",
    "metadata": {},
    "source": [
     "It is odd that the survey company found more Remain than Leave voters, given\n",
@@ -76,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11875f33",
+   "id": "45129703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e20ae14f",
+   "id": "7dc752f4",
    "metadata": {},
    "source": [
     "Let's say you are Hansard, and the survey company has given you the data.   You tell them:\n",
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6c2a1a",
+   "id": "51c3ba86",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "sampling_error"
@@ -119,14 +127,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ba72b8",
+   "id": "d4b84d00",
    "metadata": {},
    "source": [
     "## Reply to the survey company\n",
     "\n",
     "Now you know about sampling error, you can reply to the survey company.\n",
     "\n",
-    "We can reply by following the recipe in the [inference page](/iteration/inference).\n",
+    "We can reply by following the recipe in the [inference page](https://lisds.github.io/textbook/iteration/inference).\n",
     "\n",
     "Here are the steps from that page.\n",
     "\n",
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c682eec6",
+   "id": "5f1075d0",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "null_world"
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4456a1",
+   "id": "ec62c4e5",
    "metadata": {},
    "source": [
     "The next step is to simulate one trial in this world.  Here is a cell for you\n",
@@ -175,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba6ece5",
+   "id": "95a5b7ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b23cf38",
+   "id": "2feffcf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a43eee",
+   "id": "af17b356",
    "metadata": {},
    "source": [
     "Now you have you worked out how to get your measure from one trial, run 10000\n",
@@ -208,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa79702c",
+   "id": "35406106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcd80049",
+   "id": "0711b5b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3856e946",
+   "id": "942cec96",
    "metadata": {},
    "source": [
     "Finally, calculate the estimated p value (proportion) of simulated proportions which were greater than or equal to the observed proportion in the survey."
@@ -242,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f1df15",
+   "id": "d97fa3ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5e2233",
+   "id": "778a0922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6addd75b",
+   "id": "acaa83bf",
    "metadata": {},
    "source": [
     "Now the data is in, give a convincing reply to the survey company, as to whether the difference in proportions is really explicable by sampling error."
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fc5f644",
+   "id": "cd8ca2c0",
    "metadata": {
     "lines_to_next_cell": 2,
     "manual_grade": true,
@@ -283,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c048419",
+   "id": "40fef4b8",
    "metadata": {},
    "source": [
     "## Done.\n",
@@ -297,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0449d7a5",
+   "id": "94aa4c5e",
    "metadata": {},
    "outputs": [],
    "source": [
