--- a/brexit_proportions_solution.ipynb
+++ b/brexit_proportions_solution.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3ccd30a",
+   "id": "e54c1175",
    "metadata": {},
    "source": [
-    "# Preliminaries"
+    "# Brexit proportions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a1c1bf7",
+   "metadata": {},
+   "source": [
+    "## Preliminaries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73ab554c",
+   "id": "26af419f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:18:59.376742Z",
-     "iopub.status.busy": "2022-12-14T18:18:59.376367Z",
-     "iopub.status.idle": "2022-12-14T18:18:59.805818Z",
-     "shell.execute_reply": "2022-12-14T18:18:59.805399Z"
+     "iopub.execute_input": "2022-12-14T18:21:50.346121Z",
+     "iopub.status.busy": "2022-12-14T18:21:50.345680Z",
+     "iopub.status.idle": "2022-12-14T18:21:50.760233Z",
+     "shell.execute_reply": "2022-12-14T18:21:50.759874Z"
     }
    },
    "outputs": [],
@@ -41,12 +49,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2848e969",
+   "id": "eb0b35a8",
    "metadata": {},
    "source": [
-    "# Brexit proportions\n",
+    "## The survey company makes its case\n",
     "\n",
-    "Remember the [Brexit referendum](/permutation/population_permutation)?\n",
+    "Remember the [Brexit referendum](https://lisds.github.io/textbook/permutation/population_permutation)?\n",
     "\n",
     "In that page, we found that the survey company working for Hansard ended up\n",
     "with 774 respondents who said they voted Remain, and 541 who said they voted\n",
@@ -56,13 +64,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "930377ac",
+   "id": "f7003420",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:18:59.808199Z",
-     "iopub.status.busy": "2022-12-14T18:18:59.807986Z",
-     "iopub.status.idle": "2022-12-14T18:18:59.813844Z",
-     "shell.execute_reply": "2022-12-14T18:18:59.813501Z"
+     "iopub.execute_input": "2022-12-14T18:21:50.762468Z",
+     "iopub.status.busy": "2022-12-14T18:21:50.762271Z",
+     "iopub.status.idle": "2022-12-14T18:21:50.768104Z",
+     "shell.execute_reply": "2022-12-14T18:21:50.767762Z"
     }
    },
    "outputs": [],
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b0b69c",
+   "id": "8383e152",
    "metadata": {},
    "source": [
     "It is odd that the survey company found more Remain than Leave voters, given\n",
@@ -90,13 +98,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8874e98",
+   "id": "4f40d41d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:18:59.815826Z",
-     "iopub.status.busy": "2022-12-14T18:18:59.815678Z",
-     "iopub.status.idle": "2022-12-14T18:18:59.818393Z",
-     "shell.execute_reply": "2022-12-14T18:18:59.818076Z"
+     "iopub.execute_input": "2022-12-14T18:21:50.770123Z",
+     "iopub.status.busy": "2022-12-14T18:21:50.769976Z",
+     "iopub.status.idle": "2022-12-14T18:21:50.772687Z",
+     "shell.execute_reply": "2022-12-14T18:21:50.772349Z"
     }
    },
    "outputs": [],
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4567eb80",
+   "id": "fc5fcbd1",
    "metadata": {},
    "source": [
     "Let's say you are Hansard, and the survey company has given you the data.   You tell them:\n",
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "563a936f",
+   "id": "2c5266fc",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "sampling_error"
@@ -140,14 +148,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd8b60e",
+   "id": "afc25605",
    "metadata": {},
    "source": [
     "## Reply to the survey company\n",
     "\n",
     "Now you know about sampling error, you can reply to the survey company.\n",
     "\n",
-    "We can reply by following the recipe in the [inference page](/iteration/inference).\n",
+    "We can reply by following the recipe in the [inference page](https://lisds.github.io/textbook/iteration/inference).\n",
     "\n",
     "Here are the steps from that page.\n",
     "\n",
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8723d4",
+   "id": "6344b1e7",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "null_world"
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2907fb3a",
+   "id": "7fc6bc4c",
    "metadata": {},
    "source": [
     "The next step is to simulate one trial in this world.  Here is a cell for you\n",
@@ -196,13 +204,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "06b729ba",
+   "id": "d0231151",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:18:59.820665Z",
-     "iopub.status.busy": "2022-12-14T18:18:59.820515Z",
-     "iopub.status.idle": "2022-12-14T18:18:59.823762Z",
-     "shell.execute_reply": "2022-12-14T18:18:59.823438Z"
+     "iopub.execute_input": "2022-12-14T18:21:50.774871Z",
+     "iopub.status.busy": "2022-12-14T18:21:50.774729Z",
+     "iopub.status.idle": "2022-12-14T18:21:50.777957Z",
+     "shell.execute_reply": "2022-12-14T18:21:50.777579Z"
     }
    },
    "outputs": [],
@@ -217,13 +225,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77809322",
+   "id": "0b61eb8f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:18:59.825531Z",
-     "iopub.status.busy": "2022-12-14T18:18:59.825422Z",
-     "iopub.status.idle": "2022-12-14T18:18:59.837089Z",
-     "shell.execute_reply": "2022-12-14T18:18:59.836758Z"
+     "iopub.execute_input": "2022-12-14T18:21:50.779714Z",
+     "iopub.status.busy": "2022-12-14T18:21:50.779596Z",
+     "iopub.status.idle": "2022-12-14T18:21:50.791882Z",
+     "shell.execute_reply": "2022-12-14T18:21:50.791531Z"
     }
    },
    "outputs": [],
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2256fba7",
+   "id": "23744008",
    "metadata": {},
    "source": [
     "Now you have you worked out how to get your measure from one trial, run 10000\n",
@@ -244,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4d15885e",
+   "id": "f7a4197c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:18:59.841187Z",
-     "iopub.status.busy": "2022-12-14T18:18:59.841045Z",
-     "iopub.status.idle": "2022-12-14T18:19:00.474442Z",
-     "shell.execute_reply": "2022-12-14T18:19:00.474099Z"
+     "iopub.execute_input": "2022-12-14T18:21:50.795540Z",
+     "iopub.status.busy": "2022-12-14T18:21:50.795376Z",
+     "iopub.status.idle": "2022-12-14T18:21:51.427846Z",
+     "shell.execute_reply": "2022-12-14T18:21:51.427530Z"
     }
    },
    "outputs": [],
@@ -270,13 +278,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bf1a6c93",
+   "id": "f989bc4c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:19:00.476338Z",
-     "iopub.status.busy": "2022-12-14T18:19:00.476174Z",
-     "iopub.status.idle": "2022-12-14T18:19:00.485906Z",
-     "shell.execute_reply": "2022-12-14T18:19:00.485550Z"
+     "iopub.execute_input": "2022-12-14T18:21:51.429643Z",
+     "iopub.status.busy": "2022-12-14T18:21:51.429504Z",
+     "iopub.status.idle": "2022-12-14T18:21:51.438417Z",
+     "shell.execute_reply": "2022-12-14T18:21:51.438065Z"
     }
    },
    "outputs": [],
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5874b6b6",
+   "id": "754c7114",
    "metadata": {},
    "source": [
     "Finally, calculate the estimated p value (proportion) of simulated proportions which were greater than or equal to the observed proportion in the survey."
@@ -295,13 +303,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "73d7a23d",
+   "id": "b76c6eba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:19:00.489531Z",
-     "iopub.status.busy": "2022-12-14T18:19:00.489386Z",
-     "iopub.status.idle": "2022-12-14T18:19:00.491997Z",
-     "shell.execute_reply": "2022-12-14T18:19:00.491662Z"
+     "iopub.execute_input": "2022-12-14T18:21:51.442341Z",
+     "iopub.status.busy": "2022-12-14T18:21:51.442197Z",
+     "iopub.status.idle": "2022-12-14T18:21:51.444871Z",
+     "shell.execute_reply": "2022-12-14T18:21:51.444546Z"
     }
    },
    "outputs": [],
@@ -314,13 +322,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5de9a647",
+   "id": "41a35135",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:19:00.494802Z",
-     "iopub.status.busy": "2022-12-14T18:19:00.494659Z",
-     "iopub.status.idle": "2022-12-14T18:19:00.503215Z",
-     "shell.execute_reply": "2022-12-14T18:19:00.502864Z"
+     "iopub.execute_input": "2022-12-14T18:21:51.447638Z",
+     "iopub.status.busy": "2022-12-14T18:21:51.447494Z",
+     "iopub.status.idle": "2022-12-14T18:21:51.455895Z",
+     "shell.execute_reply": "2022-12-14T18:21:51.455548Z"
     }
    },
    "outputs": [],
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cb658f",
+   "id": "fe26e6b6",
    "metadata": {},
    "source": [
     "Now the data is in, give a convincing reply to the survey company, as to whether the difference in proportions is really explicable by sampling error."
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9cc7302",
+   "id": "def7b710",
    "metadata": {
     "lines_to_next_cell": 2,
     "manual_grade": true,
@@ -350,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa6b647",
+   "id": "ccd0dab0",
    "metadata": {},
    "source": [
     "## Done.\n",
@@ -364,13 +372,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f3587617",
+   "id": "e0b1878e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:19:00.506914Z",
-     "iopub.status.busy": "2022-12-14T18:19:00.506779Z",
-     "iopub.status.idle": "2022-12-14T18:19:00.528515Z",
-     "shell.execute_reply": "2022-12-14T18:19:00.528173Z"
+     "iopub.execute_input": "2022-12-14T18:21:51.459821Z",
+     "iopub.status.busy": "2022-12-14T18:21:51.459686Z",
+     "iopub.status.idle": "2022-12-14T18:21:51.481879Z",
+     "shell.execute_reply": "2022-12-14T18:21:51.481507Z"
     }
    },
    "outputs": [],
