Update from template

--- a/brexit_proportions.ipynb
+++ b/brexit_proportions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72af345a",
+   "id": "b289d166",
    "metadata": {},
    "source": [
     "# Brexit proportions"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a3b560",
+   "id": "87efd562",
    "metadata": {},
    "source": [
     "## Preliminaries"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af933a68",
+   "id": "5206991d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "937ad4f4",
+   "id": "b48e08e7",
    "metadata": {},
    "source": [
     "## The survey company makes its case\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d79f98",
+   "id": "95dc47bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7f3137",
+   "id": "74bfb72a",
    "metadata": {},
    "source": [
     "It is odd that the survey company found more Remain than Leave voters, given\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45129703",
+   "id": "e9efd285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc752f4",
+   "id": "dca494e4",
    "metadata": {},
    "source": [
     "Let's say you are Hansard, and the survey company has given you the data.   You tell them:\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c3ba86",
+   "id": "ef222904",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "sampling_error"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4b84d00",
+   "id": "79fbf999",
    "metadata": {},
    "source": [
     "## Reply to the survey company\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1075d0",
+   "id": "1097115e",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "null_world"
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec62c4e5",
+   "id": "7f413458",
    "metadata": {},
    "source": [
     "The next step is to simulate one trial in this world.  Here is a cell for you\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a5b7ec",
+   "id": "0af72b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2feffcf4",
+   "id": "e9e42bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af17b356",
+   "id": "5074c98e",
    "metadata": {},
    "source": [
     "Now you have you worked out how to get your measure from one trial, run 10000\n",
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35406106",
+   "id": "a3985c82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0711b5b1",
+   "id": "04a041ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "942cec96",
+   "id": "82aec653",
+   "metadata": {},
+   "source": [
+    "At this stage, you may want to have a look at the histogram of the 10000\n",
+    "`simulated_props`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25f80282",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell.\n",
+    "plt.hist(simulated_props, bins=20);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "299648e1",
    "metadata": {},
    "source": [
     "Finally, calculate the estimated p value (proportion) of simulated proportions which were greater than or equal to the observed proportion in the survey."
@@ -250,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d97fa3ae",
+   "id": "6bc75acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778a0922",
+   "id": "c9be5d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acaa83bf",
+   "id": "f2e0698d",
    "metadata": {},
    "source": [
     "Now the data is in, give a convincing reply to the survey company, as to whether the difference in proportions is really explicable by sampling error."
@@ -279,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd8ca2c0",
+   "id": "491643fd",
    "metadata": {
     "lines_to_next_cell": 2,
     "manual_grade": true,
@@ -291,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40fef4b8",
+   "id": "a9ab8aba",
    "metadata": {},
    "source": [
     "## Done.\n",
@@ -305,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94aa4c5e",
+   "id": "5bf15843",
    "metadata": {},
    "outputs": [],
    "source": [
