--- a/brexit_proportions_solution.ipynb
+++ b/brexit_proportions_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e54c1175",
+   "id": "f2e09aef",
    "metadata": {},
    "source": [
     "# Brexit proportions"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1c1bf7",
+   "id": "7493d0ac",
    "metadata": {},
    "source": [
     "## Preliminaries"
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26af419f",
+   "id": "c31716ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:50.346121Z",
-     "iopub.status.busy": "2022-12-14T18:21:50.345680Z",
-     "iopub.status.idle": "2022-12-14T18:21:50.760233Z",
-     "shell.execute_reply": "2022-12-14T18:21:50.759874Z"
+     "iopub.execute_input": "2022-12-14T19:30:59.211052Z",
+     "iopub.status.busy": "2022-12-14T19:30:59.210621Z",
+     "iopub.status.idle": "2022-12-14T19:30:59.631440Z",
+     "shell.execute_reply": "2022-12-14T19:30:59.631002Z"
     }
    },
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0b35a8",
+   "id": "cd1fc894",
    "metadata": {},
    "source": [
     "## The survey company makes its case\n",
@@ -64,13 +64,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7003420",
+   "id": "942da948",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:50.762468Z",
-     "iopub.status.busy": "2022-12-14T18:21:50.762271Z",
-     "iopub.status.idle": "2022-12-14T18:21:50.768104Z",
-     "shell.execute_reply": "2022-12-14T18:21:50.767762Z"
+     "iopub.execute_input": "2022-12-14T19:30:59.633841Z",
+     "iopub.status.busy": "2022-12-14T19:30:59.633610Z",
+     "iopub.status.idle": "2022-12-14T19:30:59.639480Z",
+     "shell.execute_reply": "2022-12-14T19:30:59.639145Z"
     }
    },
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8383e152",
+   "id": "6c3fc9e7",
    "metadata": {},
    "source": [
     "It is odd that the survey company found more Remain than Leave voters, given\n",
@@ -98,13 +98,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f40d41d",
+   "id": "00b82dba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:50.770123Z",
-     "iopub.status.busy": "2022-12-14T18:21:50.769976Z",
-     "iopub.status.idle": "2022-12-14T18:21:50.772687Z",
-     "shell.execute_reply": "2022-12-14T18:21:50.772349Z"
+     "iopub.execute_input": "2022-12-14T19:30:59.641446Z",
+     "iopub.status.busy": "2022-12-14T19:30:59.641294Z",
+     "iopub.status.idle": "2022-12-14T19:30:59.643975Z",
+     "shell.execute_reply": "2022-12-14T19:30:59.643660Z"
     }
    },
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc5fcbd1",
+   "id": "56d815ea",
    "metadata": {},
    "source": [
     "Let's say you are Hansard, and the survey company has given you the data.   You tell them:\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c5266fc",
+   "id": "4b74bff7",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "sampling_error"
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc25605",
+   "id": "5e21e101",
    "metadata": {},
    "source": [
     "## Reply to the survey company\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6344b1e7",
+   "id": "1228c2bd",
    "metadata": {
     "manual_grade": true,
     "manual_problem_id": "null_world"
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc6bc4c",
+   "id": "61894356",
    "metadata": {},
    "source": [
     "The next step is to simulate one trial in this world.  Here is a cell for you\n",
@@ -204,13 +204,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d0231151",
+   "id": "9d35df53",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:50.774871Z",
-     "iopub.status.busy": "2022-12-14T18:21:50.774729Z",
-     "iopub.status.idle": "2022-12-14T18:21:50.777957Z",
-     "shell.execute_reply": "2022-12-14T18:21:50.777579Z"
+     "iopub.execute_input": "2022-12-14T19:30:59.646262Z",
+     "iopub.status.busy": "2022-12-14T19:30:59.646114Z",
+     "iopub.status.idle": "2022-12-14T19:30:59.649423Z",
+     "shell.execute_reply": "2022-12-14T19:30:59.649081Z"
     }
    },
    "outputs": [],
@@ -225,13 +225,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0b61eb8f",
+   "id": "ce6a6254",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:50.779714Z",
-     "iopub.status.busy": "2022-12-14T18:21:50.779596Z",
-     "iopub.status.idle": "2022-12-14T18:21:50.791882Z",
-     "shell.execute_reply": "2022-12-14T18:21:50.791531Z"
+     "iopub.execute_input": "2022-12-14T19:30:59.651255Z",
+     "iopub.status.busy": "2022-12-14T19:30:59.651113Z",
+     "iopub.status.idle": "2022-12-14T19:30:59.663282Z",
+     "shell.execute_reply": "2022-12-14T19:30:59.662926Z"
     }
    },
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23744008",
+   "id": "b65bf83c",
    "metadata": {},
    "source": [
     "Now you have you worked out how to get your measure from one trial, run 10000\n",
@@ -252,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f7a4197c",
+   "id": "28b8bb26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:50.795540Z",
-     "iopub.status.busy": "2022-12-14T18:21:50.795376Z",
-     "iopub.status.idle": "2022-12-14T18:21:51.427846Z",
-     "shell.execute_reply": "2022-12-14T18:21:51.427530Z"
+     "iopub.execute_input": "2022-12-14T19:30:59.667163Z",
+     "iopub.status.busy": "2022-12-14T19:30:59.667020Z",
+     "iopub.status.idle": "2022-12-14T19:31:00.300088Z",
+     "shell.execute_reply": "2022-12-14T19:31:00.299705Z"
     }
    },
    "outputs": [],
@@ -278,13 +278,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f989bc4c",
+   "id": "e6d7179d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:51.429643Z",
-     "iopub.status.busy": "2022-12-14T18:21:51.429504Z",
-     "iopub.status.idle": "2022-12-14T18:21:51.438417Z",
-     "shell.execute_reply": "2022-12-14T18:21:51.438065Z"
+     "iopub.execute_input": "2022-12-14T19:31:00.302200Z",
+     "iopub.status.busy": "2022-12-14T19:31:00.302039Z",
+     "iopub.status.idle": "2022-12-14T19:31:00.311843Z",
+     "shell.execute_reply": "2022-12-14T19:31:00.311455Z"
     }
    },
    "outputs": [],
@@ -294,7 +294,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754c7114",
+   "id": "502445ad",
+   "metadata": {},
+   "source": [
+    "At this stage, you may want to have a look at the histogram of the 10000\n",
+    "`simulated_props`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1395268f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-14T19:31:00.315823Z",
+     "iopub.status.busy": "2022-12-14T19:31:00.315681Z",
+     "iopub.status.idle": "2022-12-14T19:31:00.428158Z",
+     "shell.execute_reply": "2022-12-14T19:31:00.427698Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Run this cell.\n",
+    "plt.hist(simulated_props, bins=20);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1987e990",
    "metadata": {},
    "source": [
     "Finally, calculate the estimated p value (proportion) of simulated proportions which were greater than or equal to the observed proportion in the survey."
@@ -302,14 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b76c6eba",
+   "execution_count": 9,
+   "id": "fe5e9e73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:51.442341Z",
-     "iopub.status.busy": "2022-12-14T18:21:51.442197Z",
-     "iopub.status.idle": "2022-12-14T18:21:51.444871Z",
-     "shell.execute_reply": "2022-12-14T18:21:51.444546Z"
+     "iopub.execute_input": "2022-12-14T19:31:00.431231Z",
+     "iopub.status.busy": "2022-12-14T19:31:00.430992Z",
+     "iopub.status.idle": "2022-12-14T19:31:00.433941Z",
+     "shell.execute_reply": "2022-12-14T19:31:00.433595Z"
     }
    },
    "outputs": [],
@@ -321,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "41a35135",
+   "execution_count": 10,
+   "id": "358fefa6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:51.447638Z",
-     "iopub.status.busy": "2022-12-14T18:21:51.447494Z",
-     "iopub.status.idle": "2022-12-14T18:21:51.455895Z",
-     "shell.execute_reply": "2022-12-14T18:21:51.455548Z"
+     "iopub.execute_input": "2022-12-14T19:31:00.435866Z",
+     "iopub.status.busy": "2022-12-14T19:31:00.435719Z",
+     "iopub.status.idle": "2022-12-14T19:31:00.445245Z",
+     "shell.execute_reply": "2022-12-14T19:31:00.444833Z"
     }
    },
    "outputs": [],
@@ -338,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe26e6b6",
+   "id": "0e548211",
    "metadata": {},
    "source": [
     "Now the data is in, give a convincing reply to the survey company, as to whether the difference in proportions is really explicable by sampling error."
@@ -346,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "def7b710",
+   "id": "fb81fc22",
    "metadata": {
     "lines_to_next_cell": 2,
     "manual_grade": true,
@@ -358,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd0dab0",
+   "id": "efad529e",
    "metadata": {},
    "source": [
     "## Done.\n",
@@ -371,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e0b1878e",
+   "execution_count": 11,
+   "id": "6d11ebd1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-14T18:21:51.459821Z",
-     "iopub.status.busy": "2022-12-14T18:21:51.459686Z",
-     "iopub.status.idle": "2022-12-14T18:21:51.481879Z",
-     "shell.execute_reply": "2022-12-14T18:21:51.481507Z"
+     "iopub.execute_input": "2022-12-14T19:31:00.449162Z",
+     "iopub.status.busy": "2022-12-14T19:31:00.449011Z",
+     "iopub.status.idle": "2022-12-14T19:31:00.472553Z",
+     "shell.execute_reply": "2022-12-14T19:31:00.472179Z"
     }
    },
    "outputs": [],
